# lglm

./: .gitignore  Makefile.in  README.md  aclocal.m4  config.h.in  configure.ac  lglm.pc.in  version.h
src/: affine.c  bbox.c  camera.c  constructors.c  lglm.c  lglm.h  lglm_luaapi.h  lglm_meta.c  macros.h  operations.c  operators.c  sphere.c  versor.c
tests/: luaapi.lua
